--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Tema1/build/
 /EjerciciosRepasoT1/nbproject/private/
 /EjerciciosRepasoT1/build/
+/EjRepasoT1/nbproject/private/
+/EjRepasoT1/build/
