--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /EjerciciosRepasoT1/build/
 /EjRepasoT1/nbproject/private/
 /EjRepasoT1/build/
+/Examen/nbproject/private/
+/Tema2/Raton/nbproject/private/
+/Tema2/Raton/build/
