--- a/Ejercicio1/pom.xml
+++ b/Ejercicio1/pom.xml
@@ -10,7 +10,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>com.mycompany.ejercicio1.Ejercicio1</exec.mainClass>
-    </properties
+    </properties>
     <dependencies>
         <dependency>
             <groupId>mysql</groupId>
