--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Ejercicio1/mavenproject1/target/
 /Biblioteca_hibernate/target/
 /Ejercicio2Instituto/target/
+/Ejercicio5EmpleadosHibernate/target/
+/PracticaHibernate/target/
